# names-for-free

./: .gitignore  .travis.yml  Classy.hs  ClassyTyped.hs  Dual.hs  Duality.hs  Graphs.hs  Indexed.hs  Iso.agda  IsoExists.agda  IsoShort.agda  LL.hs  McBride.hs  Name.hs  Names.agda  Names2.agda  NamesRel.agda  PaperCode2.hs  ParamPlayground.agda  README.md  STLC.agda  STLC.hs  STLC2.agda  Talk.hs  TmU.agda  TypedNbE.hs  TypedPNS.hs  TypedTerm.hs  binding-representations.agda  nbe-hoas.agda  nbe-hoas3.agda  nbe-hoas3.hs
paper/: .gitignore  ColorizeAgda.hs  Kit.hs  NomPa-without-equality.notes  NomPaKit.hs  PaperCode.hs.do  TestPaperCode.hs  abstract  all.do  auto.sh  clean.do  config.sh  config.vim  default.bin.do  default.cat.do  default.extracted.agda.do  default.force.do  default.html.do  default.ifchange.do  default.mdoutline.do  default.outline.do  default.pdf.do  default.runghc.do  default.tar.gz.do  default.tex.do  distclean.do  do  do.do  ghc-opts.sh.do  jp.bib  jp.bib.do  keywords  local.bib  main.hs  names-for-free-paper.cabal  npouillard.bib  npouillard.bib.do  outline.md  outliner.sh  run.sh  (+1 more)
paper/AgdaKit/: Colorize.hs  QQ.hs  Verb.hs
paper/Kit/: ACM.hs  Aliases.hs  Basics.hs  Char.hs  Config.hs  Haskell.hs  IEEE.hs  Preamble.hs  QQ.hs  Style.hs  Verb.hs
paper/MiniTikz/: Builder.hs  Diagram.hs  Types.hs
paper/NomPaKit/: Basics.hs  Char.hs  Config.hs  DSL.hs  Graphs.hs  Programs.hs  QQ.hs  Verb.hs
paper/Paper/: CC.hs  CPS.hs  Cata.hs  Context.hs  Discussion.hs  Intro.hs  Keys.hs  NbE.hs  Norm.hs  Overview.hs  Related.hs  Scopes.hs  Snippets.hs  (+2 more)
(+48 files in other folders)
