name:           names-for-free-paper
cabal-Version:  >= 1.2
version:        0.1
author:         Nicolas Pouillard, Jean-Philippe Bernardy
maintainer:     Nicolas Pouillard <nicolas.pouillard@gmail.com>
build-Type:     Simple

executable paper
    build-depends: base>=3.0&&<5, containers>=0.1, base-unicode-symbols,
                   directory, template-haskell, mtl, split, process,
                   transformers, Agda, uniplate>=1.2, hlatex, wl-pprint
    if impl(ghc >= 7.6)
      build-depends: HSH>=2.1
    else
      build-depends: HSH>=2.0.4 && <2.1
    main-is: main.hs
    ghc-options: -Wall
